# indradaily

./: .gitignore  CONTRIBUTING.MD  CONTRIBUTING.md  README.md  pyproject.toml  readthedocs.yml
docs/source/: conf.py  contributing.md  index.md
docs/source/api/: index.rst
docs/source/api/indradaily/: indradaily.emails.md  indradaily.jobs.cds_daily.md  indradaily.jobs.ecpds_daily.md  indradaily.jobs.md  indradaily.md
docs/source/usage/: index.md  job_usage.md
src/indradaily/: __init__.py  emails.py
src/indradaily/config/: cds_daily_params.yaml  ecpds_daily_params.yaml
src/indradaily/jobs/: cds_daily.py  ecpds_daily.py
src/indradaily/shell/: daily_jobs.sh
